apps/sample-api/overlays/stage/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
spec:
  rules:
    - host: sample-api-stage.example.internal
